[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "Kauet Dias", email = "kauetdiaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "pytest",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "psycopg2-binary",
    "gunicorn"
]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"